# objectDetection

./: .gitignore  objectDetection.sln  objectDetection.vcxproj
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
